--- a/templates/plumlib.py.erb
+++ b/templates/plumlib.py.erb
@@ -57,8 +57,8 @@ class Plumlib(object):
     def create_subnet(self, sub_db, net_db, ipnet):
         self.plumlib.create_subnet(sub_db, net_db, ipnet)
 
-    def update_subnet(self, org_sub_db, new_sub_db, ipnet):
-        self.plumlib.update_subnet(org_sub_db, new_sub_db, ipnet)
+    def update_subnet(self, orig_sub_db, new_sub_db, ipnet):
+        self.plumlib.update_subnet(orig_sub_db, new_sub_db, ipnet)
 
     def delete_subnet(self, tenant_id, net_db, net_id):
         self.plumlib.delete_subnet(tenant_id, net_db, net_id)
@@ -93,8 +93,23 @@ class Plumlib(object):
     def update_floatingip(self, floating_ip_orig, floating_ip, id):
         self.plumlib.update_floatingip(floating_ip_orig, floating_ip, id)
 
-    def delete_floatingip(self, floating_ip_org, id):
-        self.plumlib.delete_floatingip(floating_ip_org, id)
-
     def disassociate_floatingips(self, floating_ip, port_id):
         self.plumlib.disassociate_floatingips(floating_ip, port_id)
+
+    def delete_floatingip(self, floating_ip_orig, id):
+        self.plumlib.delete_floatingip(floating_ip_orig, id)
+
+    def create_security_group(self, sg_db):
+        self.plumlib.create_security_group(sg_db)
+
+    def delete_security_group(self, sg_db):
+        self.plumlib.delete_security_group(sg_db)
+
+    def create_security_group_rule(self, sg_rule_db):
+        self.plumlib.create_security_group_rule(sg_rule_db)
+
+    def create_security_group_rule_bulk(self, sg_rule_db):
+        self.plumlib.create_security_group_rule_bulk(sg_rule_db)
+
+    def delete_security_group_rule(self, sg_rule_db):
+        self.plumlib.delete_security_group_rule(sg_rule_db)
