--- a/templates/plumgrid_plugin.py.erb
+++ b/templates/plumgrid_plugin.py.erb
@@ -13,7 +13,7 @@
 #    License for the specific language governing permissions and limitations
 #    under the License.
 #
-# @author: Edgar Magana, emagana@plumgrid.com, PLUMgrid, Inc.
+# @author: Fawad Khaliq, fawad@plumgrid.com, PLUMgrid, Inc.
 
 """
 Neutron Plug-in for PLUMgrid Virtual Networking Infrastructure (VNI)
@@ -32,11 +32,9 @@ from neutron.db import db_base_plugin_v2
 from neutron.db import external_net_db
 from neutron.db import l3_db
 from neutron.db import portbindings_db
-from neutron.db import portsecurity_db
 from neutron.db import quota_db  # noqa
 from neutron.db import securitygroups_db
 from neutron.extensions import portbindings
-from neutron.extensions import portsecurity as port_sec
 from neutron.extensions import securitygroup as sec_grp
 from neutron.openstack.common import importutils
 from neutron.openstack.common import log as logging
@@ -65,16 +63,10 @@ class NeutronPluginPLUMgridV2(db_base_plugin_v2.NeutronDbPluginV2,
                               external_net_db.External_net_db_mixin,
                               l3_db.L3_NAT_db_mixin,
                               portbindings_db.PortBindingMixin,
-                              portsecurity_db.PortSecurityDbMixin,
                               securitygroups_db.SecurityGroupDbMixin):
 
-    supported_extension_aliases = ["binding",
-                                   "external-net",
-                                   "port-security",
-                                   "provider",
-                                   "quotas",
-                                   "router",
-                                   "security-group"]
+    supported_extension_aliases = ["binding", "external-net", "provider",
+                                   "quotas", "router", "security-group"]
 
     binding_view = "extension:port_binding:view"
     binding_set = "extension:port_binding:set"
@@ -121,9 +113,8 @@ class NeutronPluginPLUMgridV2(db_base_plugin_v2.NeutronDbPluginV2,
             net_db = super(NeutronPluginPLUMgridV2,
                            self).create_network(context, network)
             # Propagate all L3 data into DB
-            self._process_network_port_security_create(
-                context, network["network"], net_db)
             self._process_l3_create(context, net_db, network['network'])
+            self._ensure_default_security_group(context, tenant_id)
 
             try:
                 LOG.debug(_('PLUMgrid Library: create_network() called'))
@@ -212,25 +203,16 @@ class NeutronPluginPLUMgridV2(db_base_plugin_v2.NeutronDbPluginV2,
             # Update port security
             port_data.update(port_db)
 
-            (port_security, has_ip) = self._determine_port_security_and_has_ip(
-                context, port_data)
-
-            port_data[port_sec.PORTSECURITY] = port_security
-            self._process_port_port_security_create(
-                context, port_data, port_db)
-
-            # security group extension checks
-            if port_security and has_ip:
-                self._ensure_default_security_group_on_port(context, port)
-
-            #elif attr.is_attr_set(port_data.get(sec_grp.SECURITYGROUPS)):
-            #    raise port_sec.PortSecurityAndIPRequiredForSecurityGroups()
+            self._ensure_default_security_group_on_port(context, port)
 
             port_data[sec_grp.SECURITYGROUPS] = (
                 self._get_security_groups_on_port(context, port))
 
             self._process_port_create_security_group(
-                context, port_data, port_data[sec_grp.SECURITYGROUPS])
+                context, port_db, port_data[sec_grp.SECURITYGROUPS])
+
+            self._process_portbindings_create_and_update(context,
+                                                         port_data, port_db)
 
             device_id = port_db["device_id"]
             if port_db["device_owner"] == "network:router_gateway":
@@ -240,7 +222,7 @@ class NeutronPluginPLUMgridV2(db_base_plugin_v2.NeutronDbPluginV2,
 
             try:
                 LOG.debug(_("PLUMgrid Library: create_port() called"))
-                self._plumlib.create_port(port_data, router_db)
+                self._plumlib.create_port(port_db, router_db)
 
             except Exception as err_message:
                 LOG.error(err_message)
@@ -274,6 +256,19 @@ class NeutronPluginPLUMgridV2(db_base_plugin_v2.NeutronDbPluginV2,
             except Exception as err_message:
                 LOG.error(err_message)
                 raise plum_excep.PLUMgridException(err_msg=err_message)
+
+            if (self._check_update_deletes_security_groups(port) or
+                    self._check_update_has_security_groups(port)):
+                self._delete_port_security_group_bindings(context,
+                                                          port_db["id"])
+                sg_ids = self._get_security_groups_on_port(context, port)
+                self._process_port_create_security_group(context,
+                                                         port_db,
+                                                         sg_ids)
+
+            self._process_portbindings_create_and_update(context,
+                                                         port['port'],
+                                                         port_db)
 
         # Plugin DB - Port Update
         return self._port_viftype_binding(context, port_db)
