--- a/templates/plumlib.py.erb
+++ b/templates/plumlib.py.erb
@@ -1,4 +1,3 @@
-# vim: tabstop=4 shiftwidth=4 softtabstop=4
 # Copyright 2013 PLUMgrid, Inc. All Rights Reserved.
 #
 #    Licensed under the Apache License, Version 2.0 (the "License"); you may
@@ -13,7 +12,7 @@
 #    License for the specific language governing permissions and limitations
 #    under the License.
 #
-# @author: Edgar Magana, emagana@plumgrid.com, PLUMgrid, Inc.
+# @author: Fawad Khaliq, fawad@plumgrid.com, PLUMgrid, Inc.
 
 """
 Neutron Plug-in for PLUMgrid Virtual Networking Infrastructure (VNI)
@@ -93,14 +92,17 @@ class Plumlib(object):
     def update_floatingip(self, floating_ip_orig, floating_ip, id):
         self.plumlib.update_floatingip(floating_ip_orig, floating_ip, id)
 
-    def disassociate_floatingips(self, floating_ip, port_id):
-        self.plumlib.disassociate_floatingips(floating_ip, port_id)
-
     def delete_floatingip(self, floating_ip_orig, id):
         self.plumlib.delete_floatingip(floating_ip_orig, id)
 
+    def disassociate_floatingips(self, floating_ip, port_id):
+        self.plumlib.disassociate_floatingips(floating_ip, port_id)
+
     def create_security_group(self, sg_db):
         self.plumlib.create_security_group(sg_db)
+
+    def update_security_group(self, sg_db):
+        self.plumlib.update_security_group(sg_db)
 
     def delete_security_group(self, sg_db):
         self.plumlib.delete_security_group(sg_db)
