--- a/templates/plumgrid_plugin.py.erb
+++ b/templates/plumgrid_plugin.py.erb
@@ -29,11 +29,13 @@ from neutron.common import constants
 from neutron.common import utils
 from neutron.db import db_base_plugin_v2
 from neutron.db import external_net_db
+from neutron.db import extraroute_db
 from neutron.db import l3_db
 from neutron.db import portbindings_db
 from neutron.db import quota_db  # noqa
 from neutron.db import securitygroups_db
 from neutron.extensions import portbindings
+from neutron.extensions import extraroute
 from neutron.extensions import securitygroup as sec_grp
 from neutron.openstack.common import importutils
 from neutron.openstack.common import log as logging
@@ -62,12 +64,13 @@ cfg.CONF.register_opts(director_server_opts, "plumgriddirector")
 
 class NeutronPluginPLUMgridV2(db_base_plugin_v2.NeutronDbPluginV2,
                               external_net_db.External_net_db_mixin,
+                              extraroute_db.ExtraRoute_db_mixin,
                               l3_db.L3_NAT_db_mixin,
                               portbindings_db.PortBindingMixin,
                               securitygroups_db.SecurityGroupDbMixin):
 
     supported_extension_aliases = ["binding", "external-net", "provider",
-                                   "quotas", "router", "security-group"]
+                                   "quotas", "router", "security-group", "extraroute"]
 
     binding_view = "extension:port_binding:view"
     binding_set = "extension:port_binding:set"
