--- a/templates/plumlib.filters.erb
+++ b/templates/plumlib.filters.erb
@@ -13,9 +13,11 @@
 python: CommandFilter, python, root
 ip: CommandFilter, ip, root
 kill: CommandFilter, kill, root
-rm: CommandFilter, rm, root 
+rm: CommandFilter, rm, root
 ifc_ctl: CommandFilter, /opt/pg/bin/ifc_ctl, root, ifc_ctl
 neutron-ns-metadata-proxy: CommandFilter, /usr/bin/neutron-ns-metadata-proxy, root
 pg-local-metadata: CommandFilter, /usr/local/bin/pg-local-metadata, pg-local-metadata, root
 pg-tunnel-metadata: CommandFilter, /usr/local/bin/pg-tunnel-metadata, pg-tunnel-metadata, root
 ping: RegExpFilter, /bin/ping, root, ping, -w, \d+, -c, \d+, [0-9\.]+
+ping: IpNetnsExecFilter, ping, root
+ping: CommandFilter, ping, root
